--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "graphql-client",
-  "homepage": "https://github.com/f/graphql-client",
+  "name": "graphql.js",
+  "homepage": "https://github.com/f/graphql.js",
   "authors": [
     "Fatih Kadir Akın <fatihkadirakin@gmail.com>"
   ],
   "description": "GraphQL Client for JavaScript",
-  "main": "graphql-client.min.js",
+  "main": "graphql.js",
   "keywords": [
     "graphql",
     "graphql-client",
