--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-client",
+  "name": "graphql.js",
   "version": "0.2.0",
   "description": "GraphQL Client for JavaScript",
   "main": "graphql-client.js",
