--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "jest": "^27.4.5",
+    "jest-mock-random": "^1.1.1",
     "uglify-js": "^3.14.5"
   },
   "keywords": [
